feat: remove template, add style

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,7 @@ papertitle,
 name,
 abs {
     font-family: 'Palatino', 'Palatino Linotype', 'Book Antiqua', serif;
-    font-size: 15px; /* 增大字体 */
+    font-size: 18px; /* 增大字体 */
 }
 
 heading, heading2 {
@@ -29,17 +29,17 @@ name {
   font-size: 30px; /* 增大字体 */
 }
 
+/* 设置所有超链接的默认样式 */
 a {
-  color: #0077cc;
-  text-decoration: none;
-  text-shadow: 0px 0px 1px rgb(235, 255, 58);
+  color: rgb(143, 9, 9); /* 设置超链接默认颜色为黄色 */
+  text-decoration: none; /* 去除下划线 */
 }
 
-a:focus,
+/* 设置超链接悬停时的样式 */
 a:hover {
-  color: #083159;
-  text-decoration: none;
+  color: rgb(241, 186, 6) !important; /* 鼠标悬停时的颜色为深蓝色，使用 !important 来确保优先级 */
 }
+
 
 b {
   color: #ff5005;
