--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,13 +8,13 @@ strong,
 papertitle,
 name,
 abs {
-    font-family: 'Palatino', 'Palatino Linotype', 'Book Antiqua', serif;
-    font-size: 16px; /* 增大字体 */
+    font-family: 'Times New Roman', serif;
+    font-size: 18px; /* 增大字体 */
 }
 
 heading, heading2 {
-  font-family: 'Century', serif; /* 使用 Century 字体 */
-  font-size: 28px; /* 增大小标题字体 */
+  font-family: 'Times New Roman', serif;
+  font-size: 30px; /* 增大小标题字体 */
   text-decoration: underline;
   text-decoration-style: solid;
   -webkit-text-decoration-color: #ad7020;
